test/files/neg/t1672b.check
t1672b.scala:29: error: could not optimize @tailrec annotated method boz: it contains a recursive call outside of tail position
      case _: Throwable => boz; ???
                                ^
t1672b.scala:46: error: could not optimize @tailrec annotated method bar: it contains a recursive call outside of tail position
    else 1 + (try {
           ^
two errors found
